// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="c-xb1g3 soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="c-oz42ng soui-radio-group"
>
  <div
    class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="csnjwq0 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="cibap1r soui-radio-indicator-wrapper"
    >
      <span
        class="c-yp2wyk soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-q0fd44 soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="cf2xgde soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="cmqgv4q soui-slider-track"
    >
      <div
        class="c-n7836s soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 92%;"
      >
        <div
          class="c-8jra5e soui-slider-indicator c-wcpy3n soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="cx2sbs7 soui-slider-end-value cmr9u4g soui-slider-value"
          dir="ltr"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="c-xb1g3 soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cawsgl5 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cxd12sg soui-button-primary c3nwsno soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
